# tree-sitter-tx

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  readme-cn.md  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tx.pc.in
bindings/c/tree_sitter/: tree-sitter-tx.h
bindings/go/: binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tx/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTxTests/: TreeSitterTxTests.swift
src/: grammar.json  node-types.json  parser.c
