[package]
name = "tree-sitter-tx"
description = "Parser for transaction-trace from foundry's cast run output format"
version = "0.1.0"
authors = ["Kobayakawa Yuu <kobayakawaami@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tx"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/fadingrose/tree-sitter-tx"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
